--- a/nglview/tests/notebooks/add_structure.ipynb
+++ b/nglview/tests/notebooks/add_structure.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "view0.add_structure(s1, first_model=True)"
+    "view0.add_structure(s1, first_component=True)"
    ]
   },
   {
@@ -56,7 +56,7 @@
    },
    "outputs": [],
    "source": [
-    "view0.add_cartoon(model=1)"
+    "view0.add_cartoon(component=1)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# bug\n",
-    "view0.add_cartoon(model=0, color='residueindex')"
+    "view0.add_cartoon(component=0, color='residueindex')"
    ]
   }
  ],
