--- a/nglview/tests/notebooks/loadFile_cpp4.ipynb
+++ b/nglview/tests/notebooks/loadFile_cpp4.ipynb
@@ -47,8 +47,8 @@
    },
    "outputs": [],
    "source": [
-    "view._clear_repr(model=1)\n",
-    "view.add_surface(model=1, color='blue', opacity=0.4, wireframe=True)"
+    "view._clear_repr(component=1)\n",
+    "view.add_surface(component=1, color='blue', opacity=0.4, wireframe=True)"
    ]
   },
   {
