--- a/nglview/tests/notebooks/load_dx.ipynb
+++ b/nglview/tests/notebooks/load_dx.ipynb
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "view.add_cartoon(color='blue', model=1)"
+    "view.add_cartoon(color='blue', component=1)"
    ]
   }
  ],
