--- a/nglview/tests/notebooks/reference_structure.ipynb
+++ b/nglview/tests/notebooks/reference_structure.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# add selection for referene (index=1 in compList)\n",
-    "view._clear_repr(model=1)\n",
+    "view._clear_repr(component=1)\n",
     "\n",
     "# make reference grey\n",
     "view.add_cartoon(color='grey', index=1)"
