--- a/nglview/tests/notebooks/remote_call-complist.ipynb
+++ b/nglview/tests/notebooks/remote_call-complist.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "view.center_view(selection='1-2', model=1)"
+    "view.center_view(selection='1-2', component=1)"
    ]
   }
  ],
