--- a/nglview/tests/notebooks/remove_component.ipynb
+++ b/nglview/tests/notebooks/remove_component.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "view._remove_component(model=1)"
+    "view._remove_component(component=1)"
    ]
   }
  ],
