--- a/nglview/tests/notebooks/remove_model_id.ipynb
+++ b/nglview/tests/notebooks/remove_model_id.ipynb
@@ -29,7 +29,7 @@
     "traj2 = pt.datafiles.load_tz2()[:1]\n",
     "\n",
     "view.add_trajectory(nv.PyTrajTrajectory(traj2))\n",
-    "view.center_view(model=0)"
+    "view.center_view(component=0)"
    ]
   },
   {
@@ -40,8 +40,8 @@
    },
    "outputs": [],
    "source": [
-    "view.clear_representations(model=1)\n",
-    "view.add_licorice(color='blue', model=1)"
+    "view.clear_representations(component=1)\n",
+    "view.add_licorice(color='blue', component=1)"
    ]
   },
   {
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "view._ngl_model_ids"
+    "view._ngl_component_ids"
    ]
   },
   {
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "view.remove_model(view._ngl_model_ids[0])"
+    "view.remove_component(view._ngl_component_ids[0])"
    ]
   },
   {
@@ -136,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "assert len(view._ngl_model_ids) == 2"
+    "assert len(view._ngl_component_ids) == 2"
    ]
   },
   {
@@ -159,7 +159,7 @@
     }
    ],
    "source": [
-    "view._ngl_model_ids"
+    "view._ngl_component_ids"
    ]
   },
   {
@@ -193,7 +193,7 @@
    },
    "outputs": [],
    "source": [
-    "view.remove_model(view._ngl_model_ids[0])"
+    "view.remove_component(view._ngl_component_ids[0])"
    ]
   },
   {
@@ -227,7 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "view.remove_model(view._ngl_model_ids[0])"
+    "view.remove_component(view._ngl_component_ids[0])"
    ]
   },
   {
