--- a/nglview/tests/notebooks/show_rdkit.ipynb
+++ b/nglview/tests/notebooks/show_rdkit.ipynb
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "view2 = nv.NGLWidget()\n",
-    "view2.add_model(structure)\n",
+    "view2.add_component(structure)\n",
     "view2"
    ]
   },
