--- a/nglview/tests/notebooks/test_parmed_single_model.ipynb
+++ b/nglview/tests/notebooks/test_parmed_single_model.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "traj = pt.datafiles.load_tz2()\n",
-    "traj.save(\"test.pdb\", overwrite=True, options='model')"
+    "traj.save(\"test.pdb\", overwrite=True, options='component')"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "parm = pmd.load_file(\"test.pdb\")\n",
-    "view = nv.show_parmed(parm) # should show only 1st model, others will be shown as trajectory\n",
+    "view = nv.show_parmed(parm) # should show only 1st component, others will be shown as trajectory\n",
     "view.clear_representations()\n",
     "view.add_ball_and_stick('not hydrogen')\n",
     "view"
