--- a/nglview/tests/notebooks/test_show_pdbid.ipynb
+++ b/nglview/tests/notebooks/test_show_pdbid.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "pdb = nv.PdbIdStructure('1tsu')\n",
-    "view2.add_model(pdb)"
+    "view2.add_component(pdb)"
    ]
   },
   {
@@ -90,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "view2.clear_representations(model=1)"
+    "view2.clear_representations(component=1)"
    ]
   },
   {
@@ -101,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "view2.add_licorice(model=1)"
+    "view2.add_licorice(component=1)"
    ]
   },
   {
@@ -112,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "view2.center_view(model=1)"
+    "view2.center_view(component=1)"
    ]
   }
  ],
