--- a/nglview/tests/notebooks/trajlist_mdtraj.ipynb
+++ b/nglview/tests/notebooks/trajlist_mdtraj.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# clear repr: trpcage\n",
-    "view._clear_repr(model=1)"
+    "view._clear_repr(component=1)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# clear repr: trpzip2\n",
-    "view._clear_repr(model=0)"
+    "view._clear_repr(component=0)"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# try back: trpcage\n",
-    "view.add_line(model=1)"
+    "view.add_line(component=1)"
    ]
   },
   {
