--- a/nglview/tests/notebooks/trajlist_pytraj.ipynb
+++ b/nglview/tests/notebooks/trajlist_pytraj.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# clear repr: trpcage\n",
-    "view._clear_repr(model=1)"
+    "view._clear_repr(component=1)"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# clear repr: trpzip2\n",
-    "view._clear_repr(model=0)"
+    "view._clear_repr(component=0)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# try back: trpcage\n",
-    "view.add_line(model=1)"
+    "view.add_line(component=1)"
    ]
   },
   {
