--- a/nglview/tests/notebooks/trajlist_simpletraj.ipynb
+++ b/nglview/tests/notebooks/trajlist_simpletraj.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "view.add_cartoon(model=1, color='residueindex')"
+    "view.add_cartoon(component=1, color='residueindex')"
    ]
   },
   {
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "view.add_licorice(model=1)"
+    "view.add_licorice(component=1)"
    ]
   }
  ],
