--- a/nglview/tests/notebooks/test_load_binary_different_folder.ipynb
+++ b/nglview/tests/notebooks/test_load_binary_different_folder.ipynb
@@ -13,23 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "fn = '../../../../ngl/data/3pqr.ccp4.gz'\n",
-    "fn = '../data/3pqr.ccp4'\n",
+    "# fn = '../data/3pqr.ccp4'\n",
     "# fn = '../../../../ngl/data/3pqr.pdb'\n",
-    "# fn = './3pqr.ccp4.gz'\n",
+    "fn = './3pqr.ccp4.gz'\n",
     "\n",
     "view = nv.NGLWidget()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
