--- a/nglview/tests/notebooks/test_load_binary_different_folder.ipynb
+++ b/nglview/tests/notebooks/test_load_binary_different_folder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,41 +13,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "traj = pt.load('../../../../ngl/data/3pqr.pdb')\n",
     "fn = '../../../../ngl/data/3pqr.ccp4.gz'\n",
-    "# fn = '../data/3pqr.ccp4'\n",
-    "# fn = '../../../../ngl/data/3pqr.pdb'\n",
-    "fn = './3pqr.ccp4.gz'\n",
-    "\n",
-    "view = nv.NGLWidget()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.add_component(fn)\n",
+    "view = nv.show_pytraj(traj)\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view.add_component(fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.add_surface(opacity=0.3)"
+    "view.add_surface(opacity=0.4, wireframe=True, color='blue', component=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.export_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# can not render\n",
+    "from IPython import display\n",
+    "\n",
+    "display.Image(view._image_data)"
    ]
   }
  ],
