--- a/nglview/tests/notebooks/initFileDragDrop.ipynb
+++ b/nglview/tests/notebooks/initFileDragDrop.ipynb
@@ -2,63 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import nglview as nv, pytraj as pt\n",
-    "\n",
-    "traj = pt.load('../../../../ngl/data/3pqr.pdb')\n",
-    "view = nv.show_pytraj(traj)\n",
-    "view"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._remote_call('initFileDragDrop', target='Stage')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.send({'type': 'get', 'data': 'any'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view._remote_call('addRepresentation', target='compList',\n",
-    "                  args=['cartoon'],\n",
-    "                  kwargs={'component_index': 1})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.center_view(index=0)"
+    "import nglview as nv\n",
+    "\n",
+    "view = nv.NGLWidget()\n",
+    "view"
    ]
   }
  ],
