file drag and drop

--- a/nglview/tests/notebooks/initFileDragDrop.ipynb
+++ b/nglview/tests/notebooks/initFileDragDrop.ipynb
@@ -2,16 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[UUID('73a6116f-00f3-4bca-a642-3d143d2d3db9')]\n",
+      "[UUID('73a6116f-00f3-4bca-a642-3d143d2d3db9'), UUID('fbafe96b-53e6-4e88-89df-110a35a43034')]\n",
+      "[UUID('73a6116f-00f3-4bca-a642-3d143d2d3db9'), UUID('fbafe96b-53e6-4e88-89df-110a35a43034'), UUID('8c1580e3-6811-4e0e-a680-94577e48e37f')]\n"
+     ]
+    }
+   ],
    "source": [
     "import nglview as nv\n",
     "\n",
     "view = nv.NGLWidget()\n",
     "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view._n_dragged_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view._ngl_component_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view._js_console()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#view.send(\"test\", buffers=['hi'])\n",
+    "import numpy as np\n",
+    "\n",
+    "arr = np.arange(10).data\n",
+    "view.send({'type': 'nothing'}, buffers=[arr,])"
    ]
   }
  ],
