--- a/nglview/tests/notebooks/test_drag_and_drop_file.ipynb
+++ b/nglview/tests/notebooks/test_drag_and_drop_file.ipynb
@@ -2,21 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[UUID('73a6116f-00f3-4bca-a642-3d143d2d3db9')]\n",
-      "[UUID('73a6116f-00f3-4bca-a642-3d143d2d3db9'), UUID('fbafe96b-53e6-4e88-89df-110a35a43034')]\n",
-      "[UUID('73a6116f-00f3-4bca-a642-3d143d2d3db9'), UUID('fbafe96b-53e6-4e88-89df-110a35a43034'), UUID('8c1580e3-6811-4e0e-a680-94577e48e37f')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nglview as nv\n",
     "\n",
@@ -26,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,10 +24,10 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -56,10 +46,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[UUID('15e05ac4-682d-4c13-89e7-a41a4fcfdaba')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,28 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "view._js_console()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#view.send(\"test\", buffers=['hi'])\n",
-    "import numpy as np\n",
-    "\n",
-    "arr = np.arange(10).data\n",
-    "view.send({'type': 'nothing'}, buffers=[arr,])"
    ]
   }
  ],
