add notebook for replicating cell - (> 100K atoms, 10 frames) (#171)
* add notebook to test big trajectory

--- a/nglview/tests/notebooks/test_replicatecell_pytraj.ipynb
+++ b/nglview/tests/notebooks/test_replicatecell_pytraj.ipynb
@@ -4,14 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import nglview as nv\n",
+    "import pytraj as pt, nglview as nv\n",
     "\n",
-    "view = nv.NGLWidget()\n",
-    "view"
+    "traj = pt.datafiles.load_tz2_ortho()"
    ]
   },
   {
@@ -24,7 +23,10 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "pytraj.Trajectory, 10 frames: \n",
+       "Size: 0.031943 (GB)\n",
+       "<Topology: 142911 atoms, 46008 residues, 45684 mols, non-PBC>\n",
+       "           "
       ]
      },
      "execution_count": 2,
@@ -33,7 +35,8 @@
     }
    ],
    "source": [
-    "view._n_dragged_files"
+    "traj2 = pt.replicate_cell(traj, direction='all')\n",
+    "traj2"
    ]
   },
   {
@@ -44,29 +47,40 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[UUID('15e05ac4-682d-4c13-89e7-a41a4fcfdaba')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finish caching. Enjoy\n"
+     ]
     }
    ],
    "source": [
-    "view._ngl_component_ids"
+    "view = nv.show_pytraj(traj2)\n",
+    "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view._js_console()"
+    "view.clear_representations()\n",
+    "view.add_cartoon('protein')\n",
+    "view.add_licorice('protein')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.caching()"
    ]
   }
  ],
