--- a/nglview/tests/notebooks/export_image.ipynb
+++ b/nglview/tests/notebooks/export_image.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image(factor=1, frame=3, transparent=False)"
+    "view.render_image(factor=1, frame=3, transparent=False)"
    ]
   },
   {
