--- a/nglview/tests/notebooks/test_camelize.ipynb
+++ b/nglview/tests/notebooks/test_camelize.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "source": [
     "view.add_licorice()\n",
     "view.add_surface(sphere_detail=2, opacity=0.3, color_scheme='residueindex')\n",
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
