--- a/nglview/tests/notebooks/remove_model_id.ipynb
+++ b/nglview/tests/notebooks/remove_model_id.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
@@ -170,7 +170,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
@@ -204,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
@@ -273,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
