--- a/nglview/tests/notebooks/show_rdkit.ipynb
+++ b/nglview/tests/notebooks/show_rdkit.ipynb
@@ -66,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.render_image()"
    ]
   },
   {
@@ -145,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "view2.export_image()"
+    "view2.render_image()"
    ]
   },
   {
