--- a/nglview/tests/notebooks/test_API_coordinates_dict.ipynb
+++ b/nglview/tests/notebooks/test_API_coordinates_dict.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "           "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -105,13 +105,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view2.add_trajectory(nv.MDTrajTrajectory(mtraj))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test dummy Trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "structure = view2._trajlist[0].get_structure_string()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view2.add_trajectory(nv.MDTrajTrajectory(mtraj))"
+    "class Dummy(object):\n",
+    "    def __init__(self, structure=structure):\n",
+    "        self.structure = structure\n",
+    "        self.ext = 'pdb'\n",
+    "        self.id = 'hello'\n",
+    "    \n",
+    "    def get_coordinates(self, index):\n",
+    "        return\n",
+    "    \n",
+    "    def get_structure_string(self):\n",
+    "        return self.structure\n",
+    "    \n",
+    "    @property\n",
+    "    def n_frames(self):\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dum_traj = Dummy()\n",
+    "\n",
+    "view3 = nv.NGLWidget()\n",
+    "view3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view3.add_trajectory(dum_traj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view3.clear_representations()\n",
+    "view3.add_line()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for coords in traj2.xyz:\n",
+    "    view3.coordinates_dict = {0: coords}\n",
+    "    sleep(0.2)"
    ]
   }
  ],
