--- a/nglview/tests/notebooks/time_base64_single_vs_binary_single.ipynb
+++ b/nglview/tests/notebooks/time_base64_single_vs_binary_single.ipynb
@@ -68,13 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._send_binary = False"
+    "view._send_binary = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert view._send_binary == True"
    ]
   }
  ],
