--- a/nglview/tests/notebooks/api/render_image.ipynb
+++ b/nglview/tests/notebooks/api/render_image.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_colors(b64_image):\n",
+    "    # should install PIL\n",
+    "    # py3\n",
+    "    from PIL import Image\n",
+    "    import io, base64\n",
+    "    fp = io.BytesIO(base64.b64decode(b64_image))\n",
+    "    image = Image.open(fp)\n",
+    "    return image.getcolors(int(1E6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -18,100 +36,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.orientation =  [[0, 1, 0],\n",
-    "                     [-40., -43., -44.2],\n",
-    "                     [0, 0, 0]]"
+    "view.clear()\n",
+    "view.render_image(factor=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "s = get_colors(view._image_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.render_image()"
+    "# make sure to get all white color\n",
+    "assert len(s) == 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "import io, base64"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fp = io.BytesIO(base64.b64decode(view._image_data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "image = Image.open(fp)\n",
-    "image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "saved_image = Image.open(\"save_image.png\")\n",
-    "saved_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "image_arr = np.array(image)\n",
-    "saved_image_arr = np.array(saved_image)"
+    "view.clear()\n",
+    "view.add_cartoon()\n",
+    "view.render_image(factor=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from numpy.testing import assert_array_almost_equal\n",
+    "s = get_colors(view._image_data)\n",
     "\n",
-    "assert_array_almost_equal(image.histogram(), saved_image.histogram())"
+    "# I chose \"1000\" randomly\n",
+    "assert len(s) > 1000"
    ]
   }
  ],
