add get_colors_from_b64 to utils

--- a/nglview/tests/notebooks/api/render_image.ipynb
+++ b/nglview/tests/notebooks/api/render_image.ipynb
@@ -2,31 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_colors(b64_image):\n",
-    "    # should install PIL\n",
-    "    # py3\n",
-    "    from PIL import Image\n",
-    "    import io, base64\n",
-    "    fp = io.BytesIO(base64.b64decode(b64_image))\n",
-    "    image = Image.open(fp)\n",
-    "    return image.getcolors(int(1E6))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import nglview as nv\n",
+    "from nglview.utils import get_colors_from_b64\n",
     "import pytraj as pt\n",
     "\n",
     "traj = pt.load(nv.datafiles.TRR, nv.datafiles.PDB)\n",
@@ -36,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -48,19 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "s = get_colors(view._image_data)"
+    "s = get_colors_from_b64(view._image_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -85,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "s = get_colors(view._image_data)\n",
+    "s = get_colors_from_b64(view._image_data)\n",
     "\n",
     "# I chose \"1000\" randomly\n",
     "assert len(s) > 1000"
