--- a/nglview/tests/notebooks/time_base64_single_vs_binary_single.ipynb
+++ b/nglview/tests/notebooks/time_base64_single_vs_binary_single.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -21,29 +21,28 @@
     {
      "data": {
       "text/plain": [
-       "pytraj.Trajectory, 1000 frames: \n",
-       "Size: 0.291266 (GB)\n",
-       "<Topology: 13031 atoms, 4194 residues, 4179 mols, PBC with box type = truncoct>\n",
+       "pytraj.Trajectory, 10 frames: \n",
+       "Size: 0.004732 (GB)\n",
+       "<Topology: 21172 atoms, 6816 residues, 6768 mols, non-PBC>\n",
        "           "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rootn = '/media/1d6616e5-10d0-4c5c-a5a8-41642f034c72/casegroup_folder/casegroup/research/rna_project/simulations/'\n",
-    "tn = rootn + '/ga4_loop/wt/prmtop'\n",
-    "fn = rootn + '/ga4_loop/wt/md10.nc'\n",
+    "traj = pt.datafiles.load_tz2_ortho()\n",
     "\n",
-    "traj = pt.load(fn, tn).autoimage().superpose('@P')\n",
+    "traj = pt.replicate_cell(traj, direction=(\"111\", \"001\", \"010\", \"100\"))\n",
+    "\n",
     "traj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -79,13 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "assert view._send_binary == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view._play()"
    ]
   }
  ],
