change _send_binary to True

--- a/nglview/tests/notebooks/0delay.ipynb
+++ b/nglview/tests/notebooks/0delay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -31,55 +31,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.player.sync_frame = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.player.step = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.player.delay = 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.player.parameters = dict(delay=0.1, step=-1, sync_frame=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.player.step"
+    "view.player.d"
    ]
   }
  ],
