--- a/nglview/tests/notebooks/0delay.ipynb
+++ b/nglview/tests/notebooks/0delay.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.player.d"
+    "view.player.delay = 0.2"
    ]
   }
  ],
