--- a/nglview/tests/notebooks/0delay.ipynb
+++ b/nglview/tests/notebooks/0delay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,13 +18,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert view._send_binary == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert view.player.sync_frame == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.player.step = -2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._send_binary = True"
+    "assert view.player.parameters.get('delay') == 0.1\n",
+    "assert view.player.parameters.get('step') == -2\n",
+    "assert view.player.parameters.get('sync_frame') == False"
    ]
   },
   {
@@ -35,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "view.player.delay = 0.2"
+    "view.player.step = 1"
    ]
   }
  ],
