--- a/nglview/tests/notebooks/0delay.ipynb
+++ b/nglview/tests/notebooks/0delay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -18,48 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "assert view._send_binary == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "assert view.player.sync_frame == False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.player.step = -2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "assert view.player.parameters.get('delay') == 0.1\n",
-    "assert view.player.parameters.get('step') == -2\n",
-    "assert view.player.parameters.get('sync_frame') == False"
+    "assert view._send_binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert not view.player.sync_frame"
    ]
   },
   {
@@ -70,7 +46,20 @@
    },
    "outputs": [],
    "source": [
-    "view.player.step = 1"
+    "view.player.step = -2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert view.player.parameters.get('delay') == 0.1\n",
+    "assert view.player.parameters.get('step') == -2\n",
+    "assert view.player.parameters.get('sync_frame') == False"
    ]
   }
  ],
