--- a/nglview/tests/notebooks/test_link_player.ipynb
+++ b/nglview/tests/notebooks/test_link_player.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -41,22 +41,22 @@
     {
      "data": {
       "text/plain": [
-       "<traitlets.traitlets.link at 0x1094e1278>"
+       "<traitlets.traitlets.link at 0x1096dec88>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "link((int_text, 'value'), (view.player, 'step'))\n",
-    "link((float_text, 'value'), (view.player, '_delay'))"
+    "link((float_text, 'value'), (view.player, 'delay'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -99,6 +99,28 @@
     "from IPython import display\n",
     "\n",
     "display.Image('link_player.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view.player.sync_frame"
    ]
   }
  ],
