auto tests for different backends
only tested on my local machine

--- a/nglview/tests/notebooks/test_mdanalysis.ipynb
+++ b/nglview/tests/notebooks/test_mdanalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -14,6 +14,7 @@
     "from MDAnalysis import Universe\n",
     "from MDAnalysisTests import datafiles as mda_datafiles\n",
     "import nglview as nv\n",
+    "from nglview.utils import get_colors_from_b64\n",
     "\n",
     "universe = Universe(nv.datafiles.PDB)\n",
     "view = nv.show_mdanalysis(universe)\n",
@@ -25,22 +26,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sys.version_info(major=3, minor=5, micro=1, releaselevel='final', serial=0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "print(sys.version_info)"
+    "view.render_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "colors = get_colors_from_b64(view._image_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "assert len(colors) > 1000"
    ]
   }
  ],
